fix horizontal scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,8 @@ code {
 
 
 
-.home{
-  width:100vw;
+#root{
+  overflow-x: clip;
 }
 
 
